--- a/sass/layout/_header-logo.scss
+++ b/sass/layout/_header-logo.scss
@@ -1,4 +1,4 @@
-.logo-start {
+.logo {
   color: var(--accent-blue-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -7,7 +7,7 @@
   letter-spacing: 0.03em;
 }
 
-.header-logo-end {
+.logo__header {
   color: var(--black-color);
   font-family: Raleway;
   font-weight: 700;
