--- a/sass/layout/portfolio/_button-filters.scss
+++ b/sass/layout/portfolio/_button-filters.scss
@@ -19,29 +19,19 @@
   border: none;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: var(--accent-blue-color);
+    color: var(--primary-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+  }
 }
 
 .portfolio-button-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.button-filers:hover,
-.button-filers:active,
-.button-filers:focus {
-  background-color: var(--accent-blue-color);
-  color: var(--primary-white-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
-
-  /* box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
-    0px 2px 2px rgb(0 0 0 / 12%); */
-  /* border-radius: 4px; */
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
 }
 
 .button-blue {
@@ -52,13 +42,12 @@
 .button-grey {
   background-color: var(--button-filters-background-color);
   color: var(--title-color);
-}
-
-.button-grey:active,
-.button-grey:hover,
-.button-grey:focus {
-  background-color: var(--accent-blue-color);
-  color: var(--primary-white-color);
+  &:active,
+  &:hover,
+  &:focus {
+    background-color: var(--accent-blue-color);
+    color: var(--primary-white-color);
+  }
 }
 
 .pointer {
