--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,10 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
+.backdrop.is-hidden .modal {
+  transform: scale(2) rotate(180deg);
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -132,10 +136,6 @@ body {
   opacity: 0;
   visibility: none;
   pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: scale(2) rotate(180deg);
 }
 
 .button-hero-modal {
@@ -198,10 +198,6 @@ body {
   border-color: var(--accent-blue-color);
 }
 
-.modal-input:focus + .input-icon {
-  fill: var(--accent-blue-color);
-}
-
 .form-field {
   position: relative;
 }
@@ -214,7 +210,10 @@ body {
   position: absolute;
   left: 15px;
   top: 50%;
-  /* transform: translateY(-50%); */
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-blue-color);
 }
 
 .modal-textarea {
@@ -362,9 +361,7 @@ body {
   display: block;
 }
 
-.nav-link:hover,
-.nav-link:focus,
-.nav-link:active {
+.nav-link:hover, .nav-link:focus, .nav-link:active {
   color: var(--accent-blue-color);
 }
 
@@ -378,9 +375,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-contacts:hover,
-.nav-contacts:active,
-.nav-contacts:focus {
+.nav-contacts:hover, .nav-contacts:active, .nav-contacts:focus {
   color: var(--accent-blue-color);
 }
 
@@ -400,7 +395,7 @@ body {
   background-color: var(--accent-blue-color);
 }
 
-.logo-start {
+.logo {
   color: var(--accent-blue-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -409,7 +404,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.header-logo-end {
+.logo__header {
   color: var(--black-color);
   font-family: Raleway;
   font-weight: 700;
@@ -418,7 +413,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.footer-logo-end {
+.logo__footer {
   color: var(--primary-white-color);
   font-family: Raleway;
   font-weight: 700;
@@ -442,7 +437,7 @@ body {
   background-size: cover;
 }
 
-.hero-title {
+.hero__title {
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
@@ -453,7 +448,7 @@ body {
   margin-bottom: 30px;
 }
 
-.hero-button {
+.hero__button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -471,9 +466,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover,
-.hero-button:active,
-.hero-button:focus {
+.hero__button:hover, .hero__button:active, .hero__button:focus {
   background-color: var(--hover-button-hero-section);
 }
 
@@ -498,6 +491,10 @@ body {
 
 .features-list {
   display: flex;
+}
+
+.features-section-item {
+  width: 270px;
 }
 
 .features-section-item::before {
@@ -528,10 +525,6 @@ body {
   background-image: url(../images/astronaut.svg);
 }
 
-.features-section-item {
-  width: 270px;
-}
-
 .features-section-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -560,12 +553,12 @@ body {
   justify-content: space-between;
 }
 
-.doing-items:not(:last-child) {
-  margin-right: 30px;
-}
-
 .doing-items {
   position: relative;
+}
+
+.doing-items:not(:last-child) {
+  margin-right: 30px;
 }
 
 .doing-items-text {
@@ -647,6 +640,10 @@ body {
   height: 44px;
 }
 
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .team-social-link {
   border-radius: 50%;
   display: flex;
@@ -660,12 +657,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.team-social-link:hover,
-.team-social-link:focus {
+.team-social-link:hover, .team-social-link:focus {
   background: var(--accent-blue-color);
   fill: var(--primary-white-color);
 }
@@ -704,8 +696,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   fill: var(--accent-blue-color);
   border-color: var(--accent-blue-color);
 }
@@ -731,6 +722,10 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-address:hover, .footer-address:focus {
+  color: var(--accent-blue-color);
+}
+
 .footer-contacts {
   color: var(--footer-contacts-color);
   font-size: 14px;
@@ -740,10 +735,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-address:hover,
-.footer-address:focus,
-.footer-contacts:hover,
-.footer-contacts:focus {
+.footer-contacts:hover, .footer-contacts:focus {
   color: var(--accent-blue-color);
 }
 
@@ -797,8 +789,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
+.footer-social-link:hover, .footer-social-link:focus {
   background-color: var(--accent-blue-color);
 }
 
@@ -890,8 +881,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
+.footer-social-link:hover, .footer-social-link:focus {
   fill: currentColor;
   background-color: var(--accent-blue-color);
 }
@@ -930,6 +920,11 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.project-item:hover {
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .project-thumb {
   position: relative;
   overflow: hidden;
@@ -948,11 +943,6 @@ body {
   color: var(--primary-white-color);
   transform: translateY(100%);
   transition: transform 250ms;
-}
-
-.project-item:hover {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-item:hover .project-thumb-text {
@@ -1001,24 +991,15 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-button-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.button-filers:hover,
-.button-filers:active,
-.button-filers:focus {
+.button-filters:hover, .button-filters:active, .button-filters:focus {
   background-color: var(--accent-blue-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
-  /* box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
-    0px 2px 2px rgb(0 0 0 / 12%); */
-  /* border-radius: 4px; */
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
+}
+
+.portfolio-button-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .button-blue {
@@ -1031,9 +1012,7 @@ body {
   color: var(--title-color);
 }
 
-.button-grey:active,
-.button-grey:hover,
-.button-grey:focus {
+.button-grey:active, .button-grey:hover, .button-grey:focus {
   background-color: var(--accent-blue-color);
   color: var(--primary-white-color);
 }
