--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,6 +9,9 @@
   transition: opacity 250ms, visibility 250ms;
   /* transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  &.is-hidden .modal {
+    transform: scale(2) rotate(180deg);
+  }
 }
 
 .modal {
@@ -39,21 +42,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.btn-modal-close-black:hover {
-  background-color: var(--primary-white-color);
-  fill: var(--accent-blue-color);
+  &:hover {
+    background-color: var(--primary-white-color);
+    fill: var(--accent-blue-color);
+  }
 }
 
 .is-hidden {
   opacity: 0;
   visibility: none;
   pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: scale(2) rotate(180deg);
 }
 
 .button-hero-modal {
@@ -112,29 +110,25 @@
   border-radius: 4px;
   padding-left: 42px;
   outline: none;
-}
-
-.modal-input:focus {
-  border-color: var(--accent-blue-color);
-}
-
-.modal-input:focus + .input-icon {
-  fill: var(--accent-blue-color);
+  &:focus {
+    border-color: var(--accent-blue-color);
+  }
 }
 
 .form-field {
   position: relative;
-}
-
-.form-field:last-child {
-  margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 20px;
+  }
 }
 
 .input-icon {
   position: absolute;
   left: 15px;
   top: 50%;
-  /* transform: translateY(-50%); */
+  .modal-input:focus + & {
+    fill: var(--accent-blue-color);
+  }
 }
 
 .modal-textarea {
@@ -151,10 +145,9 @@
   padding: 12px 16px;
   resize: none;
   outline: none;
-}
-
-.modal-textarea:focus {
-  border-color: var(--accent-blue-color);
+  &:focus {
+    border-color: var(--accent-blue-color);
+  }
 }
 
 .policy {
