--- a/sass/layout/portfolio/_our-project.scss
+++ b/sass/layout/portfolio/_our-project.scss
@@ -30,6 +30,11 @@
   width: 370px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .project-thumb {
@@ -51,12 +56,6 @@
   color: var(--primary-white-color);
   transform: translateY(100%);
   transition: transform 250ms;
-}
-
-.project-item:hover {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-item:hover .project-thumb-text {
